<resources>
    <string name="app_name">Mad</string>
    <string name="user_image">user image</string>
    <string name="edit_image">edit picture</string>
    <string name="title_basic_information">My basic information</string>
    <string name="title_user_name">Name and surname</string>
    <string name="user_name">Your full name</string>
    <string name="title_nickname">Nickname</string>
    <string name="user_nickname">Chose a nickname</string>
    <string name="title_age">Age</string>
    <string name="user_age">Insert a age</string>
    <string name="title_gender">Gender</string>
    <string name="user_gender">Not specified</string>
    <string name="title_email">Email</string>
    <string name="user_email">example@email.com</string>
    <string name="title_number">Tel number</string>
    <string name="user_number">+39 0000000000</string>
    <string name="title_description">Something about me</string>
    <string name="user_description">Put a description</string>
    <string name="title_languages">My languages</string>
    <string name="user_languages">No languages selected</string>
    <string name="title_preferences">My preferences</string>
    <string name="title_city">City</string>
    <string name="user_city">No city selected where to play</string>
    <string name="title_time">Time</string>
    <string name="user_time">No time range selected where to play</string>
    <string name="title_games">Games I play</string>
    <string name="user_games">No games selected</string>
    <string name="title_feedback">What other people say about me</string>
    <string name="user_feedback">No feedback</string>
    <string name="confirm_button">Confirm</string>
    <string name="cancel_button">Cancel</string>
    <string name="add_sport">Add a sport</string>
    <string name="sport_achievements">Write your achievements</string>
    <string name="image_from_gallery">Select an image from the phone gallery</string>
    <string name="take_picture">Use the camera to take a picture</string>
    <string name="add_time">Add a time slot</string>
    <string name="delete_sport">Delete a sport</string>

    <string name="nav_menu">Menu</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_reservations">Your reservations</string>
    <string name="nav_book_reservation">Book reservation</string>
    <string name="nav_review_courts">Review courts</string>
    <string name="nav_browse_courts">Browse courts</string>
    <string name="nav_exit">Logout</string>


    <string name="bar_profile">Your profile</string>

    <string name="select_sport_time_slot_reservation">Select your details</string>
    <string name="select_city_reservation">Insert a city</string>
    <string name="check_availability_button">Check availability</string>
    <string name="new_reservations_available">New reservations available</string>
    <string name="join_reservation">Join one reservation</string>

    <string name="emailAddress">Email Address</string>
    <string name="save_username">FullName</string>
    <string name="save_nickname">Nickname</string>
    <string name="save_gender">Gender</string>
    <string name="save_age">Age</string>
    <string name="save_email">Email</string>
    <string name="save_telnumber">Telephone</string>
    <string name="save_description">Description</string>
    <string name="phone">Phone</string>
    <string name="save_city">City</string>
    <string name="save_languages">Languages</string>
    <string name="save_numbersports">NumberSports</string>
    <string name="save_namesports">NameSports</string>
    <string name="save_levelsports">LevelSports</string>

    <string name="book_a_reservation">Book a reservation</string>
    <string name="no_reservation">No reservation for today</string>
    <string name="no_availability">No availability found</string>

    <string name="label_reservation_number">Reservation number</string>
    <string name="content_reservation_number">#00000</string>
    <string name="label_sport_typology">Sport type</string>
    <string name="content_sport_typology">Chose a sport</string>
    <string name="label_place">Structure</string>
    <string name="content_place">Chose a structure</string>
    <string name="label_date_time">Date and time</string>
    <string name="content_date_time">DD-MM-YY HH:mm</string>
    <string name="label_notes">Notes</string>
    <string name="content_notes">No notes inserted</string>
    <string name="int_content_notes">Do you need something special? Put here your requests!</string>
    <string name="content_from_time">From</string>
    <string name="content_to_time">To</string>
    <string name="content_description_from">From time slot</string>
    <string name="content_description_to">To time slot</string>

    <string name="average_past_rating_description">Average rating assigned:</string>
    <string name="assigned_rating_description">Rating assigned</string>
    <string name="no_past_rating">No rating assigned yet</string>
    <string name="no_reviews">No review found</string>

    <string name="delete_reservation_button">Delete reservation</string>
    <string name="title_popup_delete_reservation">Do you want to delete the reservation?</string>
    <string name="confirm_button_popup_reservation">Delete reservation</string>
    <string name="cancel_button_popup_reservation">Cancel</string>
    <string name="text_select_date_and_time">Select select time range and date to view availability, then choose a slot</string>

    <string name="rate_experience_title">Rate your experience</string>
    <string name="rate_experience_description">Give a vote: 1 - insufficient, 5 - excellent</string>
    <string name="rate_title_sport_structure">The structure and the courts are suitable</string>
    <string name="rate_equipment">The sports center equipment is adequate</string>
    <string name="rate_title_dressing_room">The dressing rooms are suitable</string>
    <string name="rate_personnel">The staff is competent and helpful</string>
    <string name="rate_feedback_title">Give us your feedback</string>
    <string name="rate_no_feedback">No extra comment added</string>
    <string name="rate_feedback_hint">Comment...</string>
    <string name="structure">Structure:</string>
    <string name="equipment">Equipment:</string>
    <string name="dressing_rooms">Dressing rooms:</string>
    <string name="staff">Staff:</string>
    <string name="additional_comment">Additional comment:</string>
    <string name="no_comment_inserted">No comment inserted</string>
    <string name="author">Author:</string>
    <string name="no_reservations_found">No reservations found</string>
    <string name="select_sports_you_play">Select sports you play</string>
    <string name="continue_button">Continue</string>
</resources>
