<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/margin_left_grid"
        android:layout_marginTop="@dimen/margin_top_grid"
        android:layout_marginEnd="@dimen/margin_right_grid"
        android:layout_marginBottom="@dimen/margin_bottom_grid"
        android:orientation="vertical"
        tools:context=".ShowReservationDetailActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_reservation_info"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_right_label_reservation_info"
                android:fontFamily="@font/crete_round"
                android:text="@string/label_reservation_number"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/content_reservation_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/crete_round"
                android:text="@string/content_reservation_number"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_reservation_info"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_right_label_reservation_info"
                android:fontFamily="@font/crete_round"
                android:text="@string/label_sport_typology"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_info_reservation" />

            <TextView
                android:id="@+id/content_sport_typology"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/crete_round"
                android:text="@string/content_sport_typology"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_info_reservation" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_reservation_info"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_right_label_reservation_info"
                android:fontFamily="@font/crete_round"
                android:text="@string/label_place"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_info_reservation" />

            <TextView
                android:id="@+id/content_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/crete_round"
                android:text="@string/content_place"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_info_reservation" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_reservation_info"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_right_label_reservation_info"
                android:fontFamily="@font/crete_round"
                android:text="@string/label_date_time"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_info_reservation" />

            <TextView
                android:id="@+id/content_date_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/crete_round"
                android:text="@string/content_date_time"
                android:textColor="@color/black"
                android:textSize="@dimen/font_size_info_reservation" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>